Tue Aug 31 23:24:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_main_button): Only start  
	a drag if the left button is pressed.  (#151490, Frederic Croszat)

2004-08-28  Robert Ögren  <gtk@roboros.com>

	On Win32, do not produce tablet motion or button events while a
	window is being moved or resized. (#151090, reported by Shaneyfelt)

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkglobals-win32.c
	* gdk/win32/gdkevents-win32.c: Rename the variable resizing to
	_sizemove_in_progress and make it extern.

	* gdk/win32/gdkinput-win32.c (_gdk_input_other_event): Ignore
	motion and button events if _sizemove_in_progress is true.

2004-08-26  Bill Haneman <billh@gnome.org>

	* gtk/gtktreeview:
	(gtk_tree_view_move_cursor_up_down):
	If a multi-selection list contains only one item,
	select it on cursor_up or cursor_down.
	Fixes bug #131226.
	[patch from Padraig O'Briain]

2004-08-22  Robert Ögren  <gtk@roboros.com>

	On Win32, make graphical tablets work on multi-monitor systems.
	(#145467, reported by buttknock1@ya...)

	* gdk/win32/gdkinput-win32.c (gdk_input_translate_coordinates):
	Use dimensions of _gdk_parent_root as screen size.
	(gdk_input_get_root_relative_geometry): Get coordinates relative
	to GDK root window instead of Win32 coordinates.
	(_gdk_input_other_event): Updated accordingly.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksizegroup.c (gtk_size_group_add_widget): Fix
	a typo, noticed by Tim Janik.

	* configure.in: Post-release version bump.

	* === Released 2.4.9 ===

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Post-release version bump.

	* === Released 2.4.8 ===

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (check_is_folder): Use 
	get_file_info() rather than trying get_folder() and 
	checking for an error directly because older versions 
	of the gnome-vfs backend don't return an error 
	immediately.  (#150852, Zack Cerza )
